# junk

./: Makefile  README  alloc.cpp  alloc.hpp  alloc_test.cpp  malloc_wrapper.cpp
allocation/cpp/: malloc_wrapper.cpp
arm-race/: Makefile  arm_race.cpp
arm64express/: Cargo.toml
arm64express/src/: ast.rs  codegen.rs  main.rs  parser.rs
async_from_c/: Cargo.toml  Makefile  main.c
async_from_c/src/: lib.rs
bench_indirect/: Cargo.toml
bench_indirect/benches/: bench.rs
bench_indirect/src/: lib.rs
blake3_wasm_simd_fuzz/: Cargo.toml  README.md
blake3_wasm_simd_fuzz/executor/: Cargo.toml
blake3_wasm_simd_fuzz/executor/src/: main.rs
blake3_wasm_simd_fuzz/wasm_module/: Cargo.toml
blake3_wasm_simd_fuzz/wasm_module/src/: lib.rs
blake3_wasm_simd_fuzz/wasm_module_c/: main.c
cpp/: Makefile  alloc.hpp
crossby/: Cargo.toml
crossby/benches/: basic.rs
crossby/src/: lib.rs
docs/: spb-eat.md
false_sharing/: Cargo.toml  build.rs
false_sharing/src/: main.rs  params.rs
gcbook/c3_5_onepass/: Cargo.toml
gcbook/c3_5_onepass/benches/: benchmark.rs
gcbook/c3_5_onepass/src/: lib.rs
hazard/: Cargo.toml
hazard/atomic-list/: Cargo.toml
hazard/atomic-list/src/: lib.rs
hazard/file_watcher/: Cargo.toml
hazard/file_watcher/src/: main.rs
lock_many/: Cargo.toml  README.md
lock_many/benches/: bench.rs
lock_many/src/: lib.rs
marknspenser/: Cargo.toml  README
marknspenser/src/: lib.rs  mem.rs  stack.rs  stat.rs
minhash/: Cargo.toml
minhash/src/: main.rs
nickbrain/: Cargo.toml  README
nickbrain/src/: main.rs
object-pool/cpp/: main.cpp
object-pool/rust/: Cargo.toml
object-pool/rust/src/: main.rs
pyutf8str/: Cargo.toml  README.md
pyutf8str/src/: lib.rs
pyutf8str/tests/: test_utf8str.py
raft_experiment/: Cargo.toml
raft_experiment/bench_common/: Cargo.toml
raft_experiment/bench_common/src/: lib.rs  register.rs  server.rs
raft_experiment/bench_queued/: Cargo.toml
raft_experiment/bench_queued/src/: main.rs
raft_experiment/bench_single/: Cargo.toml
raft_experiment/bench_single/src/: main.rs
raft_experiment/example/: config.yaml
raft_experiment/liblog/: Cargo.toml
raft_experiment/liblog/src/: batch.rs  lib.rs  storage.rs
raft_experiment/server/: Cargo.toml
raft_experiment/server/src/: config.rs  main.rs  model.rs  raft_network.rs  raft_storage.rs
raft_experiment/src/: config.rs  log_storage.rs  main.rs  model.rs  raft_network.rs
rust-atomics/: Cargo.toml
rust-atomics/src/: lib.rs
rust/src/: lib.rs
simd/str/: Makefile  v.cpp
simhash/: Cargo.toml
simhash/src/: main.rs
swap_tree/: Cargo.toml
swap_tree/benches/: bench.rs
swap_tree/src/: lib.rs
telomere/: Cargo.toml
telomere/src/: main.rs
telomere/src/store/: mod.rs
thuja/: Cargo.toml
thuja/src/: fun.rs  main.rs
z3/: inv.py
