[package]
name = "async_from_c"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "trust-dns"] }
tokio-stream = "*"
once_cell = "1.5"

[lib]
name = "experiment"
crate-type = ["cdylib"]
