[package]
name = "raft_experiment"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = "0.5.0"
tokio = { version = "0.2", features = ["full"] }
clap = { version = "2.33", features = ["yaml"] }
serde = "1.0"
serde_yaml = "0.8"
