[package]
name = "telomere"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde_json = "1.0.68"
clap = { version = "3", features = ["derive"] }
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
