[package]
name = "telomere"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
log = "0.4.17"
pretty_env_logger = "0.5.0"
serde_json = "1.0.91"
clap = { version = "4.4.4", features = ["derive"] }
teloxide = { version = "0.14", features = ["macros"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
