[package]
name = "bench_queued"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full", "macros"] }
warp = "0.2"
liblog = { path = "../liblog" }
bench_common = { path = "../bench_common" }
