[package]
name = "liblog"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "0.2", features = ["fs", "macros", "sync", "rt-util", "time"] }
futures-util = "0.3"
thiserror = "1.0"
