[package]
name = "raft_experiment"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-raft = "0.6"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_yaml_ng = "0.10"
byteorder = "1"
reqwest = "0.12"
bincode = "1.3"
warp = "0.3"
memstore = "0.2"
clap = { version = "4.4.8", features = ["derive"] }
